Auto generate some tests