@@ -8,6 +8,18 @@ java {
     }
 }
 
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += [
+            "--add-modules", "jdk.incubator.vector"
+    ]
+}
+
+test {
+    jvmArgs += [
+            "--add-modules", "jdk.incubator.vector"
+    ]
+}
+
 repositories {
     mavenCentral()
     maven { url 'https://jitpack.io' }
@@ -16,4 +28,11 @@ repositories {
 dependencies {
     implementation 'com.github.iondrive-co:JAid:747eda6522'
     testImplementation 'org.assertj:assertj-core:3.24.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.1'
+}
+
+test {
+    useJUnitPlatform()
 }
